Fix overflow issue

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1288,6 +1288,7 @@ iframe {
 
 .iframe-container {
   background: black;
+  overflow: hidden;
 }
 
 /* END CUSTOM */
